       vpRobotSimulator, vpFFMPEG, vpBSpline
     - It is now possible to grab images from an usb webcam with the
       vpV4l2Grabber class that is based on the video 4 linux 2 driver.
     - When it was possible without braking the backward compatibilty std::list was 
       introduced instead of vpList. Some of the functions that use vpList are
       now deprecated. 
  - Build
     - Set the build type by default to release
     - Improve the usage of debug versus release third-party libraries
  - Bug fixed
     - [11110] On OSX vpDisplayOpenCV does not display images since OpenCV 2.1.0
     - [11147] Coin not installed, cannot read VRML files
     - [11473] vpImageTools::flip() come out error when deal with vpImage
       with vpRGBa type
     - [11529] ViSP / OpenCV(2.2.0) incompatibility
     - [11563] segfault in vpVideoReader
     - [11617] selecting a subset of features is not taken into account in 
       vpServo
     - [11916] Build issues with GTK2 on ubuntu 10.10 (fatal error:
       gdk-pixbuf/gdk-pixbuf.h)
     - [11924] svdNr fails on some matrices where svdGsl succeeds
     - [11942] Build issues with GSL on OSX due to 32/64 bits architecture
     - [11943] Build issues with libjpeg on OSX due to 32/64 bits architecture
     - [11944] Build issues with libpng on OSX due to 32/64 bits architecture
     - [11981] vpV4l2Grabber class based on video 4 linux 2 is not able to
       grab images from an usb webcam
     - [12329] Bad font problem when opening vpPlot example
     - [12334] Under windows, link errors when some 3rd party libs are not
       build in the same build configuration as ViSP 
     - [12499] servoSimu4Points: World point disposition does not match camera
     - [12591] Seg fault when using setCleanPreviousImage() from 
       vpImageSimulator
     - [12739] Problem initialising a vpMeEllipse
     - [13014] Bug in vpCalibration::calibVVSMulti() jacobian
     - [13015] vpFFMPEG compatibility issue with ffmpeg-0.8 release